--- a/src/main/resources/templates/recepcion/homeRecepcion.html
+++ b/src/main/resources/templates/recepcion/homeRecepcion.html
@@ -29,7 +29,23 @@
         <h1 class="centrado">Home Recepción</h1>
 
         <div class="contenedor-dashboard">
-            
+            <div class="izquierda" style="border: solid 1px;">
+                <h1>logo</h1>
+            </div>
+            <div class="centro" style="border: solid 1px;">
+                <h1>Recepción</h1>
+                <h3>Bienvenido, Homero Simpson</h3>
+                <h6>Buscador...</h6>
+            </div>
+            <div class="derecha" style="border: solid 1px;">
+                <h6 class="center">Lunes</h6>
+                <h3 class="center">31</h3>
+                <h6 class="center">Febrero</h6>
+                <h3 class="center">2025</h3>
+            </div>
+        </div>
+        <br>
+        <div class="contenedor-dashboard">
             <div class="izquierda center" style="border: solid 1px; width: 75px;">
                 <div class="menu-header">
                     <a class="link-a" th:href="@{/recepcion/altaCliente}"><img class="icono-header"
@@ -64,12 +80,12 @@
                 </div>
                 <div class="spac-around">
                     <div style="width: 200px; height: 100px; border: solid 1px; border-radius: 5px; margin: 10px;">
-                        <h6>Ordenes sin Aviso</h6>
+                        <h6>Ordenes para Avisar</h6>
                         <h1 class="center">3</h1>
                     </div>
                     <div style="width: 200px; height: 100px; border: solid 1px; border-radius: 5px; margin: 10px;">
-                        <h6>Ordenes sin Aviso</h6>
-                        <h1 class="center">3</h1>
+                        <h6>Ordenes en Curso</h6>
+                        <h1 class="center">1</h1>
                     </div>
                 </div>
 
