--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -70,6 +70,7 @@ body {
 .tf-14 {
     font-size: 16px;
     font-family: "Krona One", serif;
+    text-align: left;
 }
 
 /* Estilos Main */
@@ -871,6 +872,6 @@ a {
 
 .contenedor-dashboard {
     display: grid;
-    grid-template-columns: 10% 70% 20%;
+    grid-template-columns: 15% 65% 20%;
     width: 100%;
 }
