--- a/src/main/resources/static/css/estilos.css
+++ b/src/main/resources/static/css/estilos.css
@@ -826,14 +826,23 @@ a {
 
 /* Home Recepción */
 
+.dropdown-menu {
+    min-width: 200px;
+    min-height: 350px;
+    justify-content: center;
+}
+
 .contenedor-tarjeta {
     width: 250px;
     height: 250px;
 }
 
 .contenedor-tarjeta-estirada {
-    width: 350px;
+    /* width: 350px; */
     height: 200px;
+    width: 50%;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .black {
@@ -848,6 +857,10 @@ a {
 
 .mr15 {
     margin: 15px;
+}
+
+.h-350 {
+    height: 350px;
 }
 
 /* Estilos de todos los Botones */
@@ -875,3 +888,4 @@ a {
     grid-template-columns: 15% 65% 20%;
     width: 100%;
 }
+
