--- a/src/main/resources/templates/recepcion/homeRecepcion.html
+++ b/src/main/resources/templates/recepcion/homeRecepcion.html
@@ -19,15 +19,158 @@
 
     <!-- Main -->
     <main>
+
+        <br>
+        <!-- <h1 class="centrado">Home Recepción</h1> -->
+
+        <div class="contenedor-dashboard">
+            <div class="izquierda">
+                <div class="center">
+                    <div class="center">
+                        <img class="circle" th:src="@{/images/{img} (img=${usuario.foto})}" alt="img">
+                    </div>
+                    <!-- <p class="user-name" th:text="${usuario.nombreUsuario}"></p> -->
+                </div>
+            </div>
+            <div class="centro">
+                <h1>Recepción</h1>
+                <h3 th:text="'Bienvenido, ' + ${usuario.nombre + ' ' + usuario.apellido}"></h3>
+                <!-- <h6>Buscador...</h6> -->
+                
+            </div>
+            <div class="derecha" style="border: solid 1px;">
+                <h3 class="center">Lunes <span>31</span></h3>
+                <h3 class="center">Febrero <span>2025</span></h3>
+            </div>
+        </div>
         <div class="contenedor-exito">
             <div th:if="${exito}" class="alerta-exito" th:text="${exito}"></div>
         </div>
         <div class="contenedor-error">
             <div th:if="${error}" class="alerta-error" th:text="${error}"></div>
         </div>
+        <div class="contenedor-dashboard">
+            <div class="izquierda" style="border: solid 1px">
+                <ul class="dropdown-menu card border">
 
-        <h1 class="centrado">Home Recepción</h1>
+                    <li class="center">
+                        <div class="card border mrt-5 w90 center">
+                            <a class="black dos-columnas-menu" th:href="@{/recepcion/altaCliente}">
+                                <div class="center">
+                                    <img class="w20" th:src="@{/iconos/agregar-cliente.png}" alt="altaCliente">
+                                </div>
+                                <div class="mrt-10">
+                                    <p class="tf-14">Alta Cliente</p>
+                                </div>
+                            </a>
+                        </div>
+                    </li>
 
+                    <li class="center">
+                        <div class="card border mrt-5 w90 center">
+                            <a class="black dos-columnas-menu" th:href="@{/recepcion/clientes}">
+                                <div class="center">
+                                    <img class="w20" th:src="@{/iconos/grupo5-negro.png}" alt="grupo5-negro">
+                                </div>
+                                <div class="mrt-10">
+                                    <p class="tf-14">Clientes</p>
+                                </div>
+                            </a>
+                        </div>
+                    </li>
+
+                    <li class="center">
+                        <div class="card border mrt-5 w90 center">
+                            <a class="black dos-columnas-menu" th:href="@{/equipo/equipos}">
+                                <div class="center">
+                                    <img class="w20" th:src="@{/iconos/equipos-negro.png}" alt="equipos">
+                                </div>
+                                <div class="mrt-10">
+                                    <p class="tf-14">Equipos</p>
+                                </div>
+                            </a>
+                        </div>
+                    </li>
+
+                    <li class="center">
+                        <div class="card border mrt-5 w90 center">
+                            <a class="black dos-columnas-menu" th:href="@{/orden/ordenes}">
+                                <div class="center">
+                                    <img class="w20" th:src="@{/iconos/reparaciones-negro.png}"
+                                        alt="reparaciones-negro">
+                                </div>
+                                <div class="mrt-10">
+                                    <p class="tf-14">Ordenes</p>
+                                </div>
+                            </a>
+                        </div>
+                    </li>
+
+                    <li class="center">
+                        <div class="card border mrt-5 w90 center">
+                            <a class="black dos-columnas-menu" th:href="@{/usuario/cerrar}">
+                                <div class="center">
+                                    <img class="w20" th:src="@{/iconos/btn_power.png}" alt="usuario">
+                                </div>
+                                <div class="mrt-10">
+                                    <p class="tf-14">Cerrar Sesión</p>
+                                </div>
+                            </a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="centro" style="border: solid 1px">
+                <div class="spac-around">
+                    <div class="contenedor-tarjeta-estirada">
+                        <div class="card border">
+                            <div class="card border mr15">
+                                <br>
+                                <h3 class="center">Clientes Registrados</h3>
+                                <h1 class="center">74</h1>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="contenedor-tarjeta-estirada">
+                        <div class="card border">
+                            <div class="card border mr15">
+                                <br>
+                                <h3 class="center">Ordenes Pendientes</h3>
+                                <h1 class="center">8</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="spac-around">
+                    <div class="contenedor-tarjeta-estirada">
+                        <div class="card border">
+                            <div class="card border mr15">
+                                <br>
+                                <h3 class="center">Ordenes x Avisar</h3>
+                                <h1 class="center">3</h1>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="contenedor-tarjeta-estirada">
+                        <div class="card border">
+                            <div class="card border mr15">
+                                <br>
+                                <h3 class="center">Ordenes en Curso</h3>
+                                <h1 class="center">1</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="derecha" style="border: solid 1px">
+                <h1>derecha</h1>
+            </div>
+        </div>
         <div class="contenedor-formulario mrt-30">
             <div class="formulario">
                 <!-- Grupo: Alta Cliente -->
