--- a/src/main/resources/templates/recepcion/homeRecepcion.html
+++ b/src/main/resources/templates/recepcion/homeRecepcion.html
@@ -19,15 +19,13 @@
 
     <!-- Main -->
     <main>
-
         <br>
-        <!-- <h1 class="centrado">Home Recepción</h1> -->
-
         <div class="contenedor-dashboard">
             <div class="izquierda card border" style="margin-right: 10px;">
                 <div class="card border mr15">
                     <div class="center">
-                        <img class="" style="width: 100px; height: 100px; border-radius: 5px;" th:src="@{/images/{img} (img=${usuario.foto})}" alt="img">
+                        <img class="" style="width: 100px; height: 100px; border-radius: 5px;"
+                            th:src="@{/images/{img} (img=${usuario.foto})}" alt="img">
                     </div>
                 </div>
             </div>
@@ -38,7 +36,7 @@
                     <h3 th:text="'Welcome, ' + ${usuario.nombre + ' ' + usuario.apellido}"></h3>
                 </div>
             </div>
-            
+
             <div class="derecha spac-around">
                 <div class="card border">
                     <div class="card border mr15" style="padding: 10px;">
@@ -46,7 +44,7 @@
                         <h1 class="center" id="diaMes"></h1>
                     </div>
                 </div>
-                
+
                 <div class="card border">
                     <div class="card border mr15" style="padding: 10px;">
                         <h3 class="center" id="mes"></h3>
@@ -196,7 +194,7 @@
                     </div>
                 </div>
             </div>
-            
+
         </div>
 
 
